# google-search-mcp

./: .env.example  CLIENT_SETUP.md  LICENSE  README.md  README_CLIENT.md  UV_USAGE.md  client_config.json  client_example.py  main.py  pyproject.toml  requirements.txt  run_client.py
google_search_mcp/: __init__.py  main.py
